# pointer-utils

./: Cargo.toml  README.md  bors.toml  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml  pr.yaml  publish-erasable.yaml  publish-ptr-union.yaml  publish-rc-borrow.yaml  publish-rc-box.yaml  publish-slice-dst.yaml  rustdoc.yaml
LICENSE/: MIT
blog/: Announcement.md
crates/erasable/: Cargo.toml  README.md  build.rs
crates/erasable-core/: Cargo.toml
crates/erasable-core/src/: lib.rs
crates/erasable/src/: lib.rs
crates/erasable/tests/: abuse.rs  smoke.rs  this_is_ub_examples.rs
crates/ptr-union/: Cargo.toml  README.md  build.rs
crates/ptr-union/src/: lib.rs
crates/ptr-union/tests/: clone_unaligned.rs  smoke.rs
crates/rc-borrow/: Cargo.toml  README.md  build.rs
crates/rc-borrow/src/: lib.rs
crates/rc-borrow/tests/: smoke.rs
crates/rc-box/: Cargo.toml  README.md
crates/rc-box/src/: lib.rs
crates/slice-dst/: Cargo.toml  README.md  build.rs
crates/slice-dst-macros/: .gitignore  Cargo.toml  README.md  build.rs
crates/slice-dst-macros/impl/: Cargo.toml
crates/slice-dst-macros/impl/.cargo/: config.toml
crates/slice-dst-macros/impl/src/: lib.rs
crates/slice-dst-macros/src/: lib.rs
crates/slice-dst/examples/: my_vec.rs
crates/slice-dst/src/: layout_polyfill.rs  lib.rs  polyfill.rs  provided_types.rs  rc_impls.rs  yolo_rc_impls.rs
crates/slice-dst/tests/: derive.rs  leak.rs  smoke.rs
erasable/: all.html  fn.erase.html  index.html  sidebar-items.js  struct.Thin.html  trait.Erasable.html  trait.ErasablePtr.html  type.ErasedPtr.html
ptr_union/: all.html  enum.Enum16.html  enum.Enum2.html  enum.Enum4.html  enum.Enum8.html  index.html  sidebar-items.js  struct.Builder16.html  struct.Builder2.html  struct.Builder4.html  struct.Builder8.html  struct.Union16.html  struct.Union2.html  struct.Union4.html  struct.Union8.html
rc_borrow/: all.html  index.html  sidebar-items.js  struct.ArcBorrow.html  struct.RcBorrow.html
rc_box/: all.html  index.html  sidebar-items.js  struct.ArcBox.html  struct.RcBox.html
search.desc/erasable/: erasable-desc-0-.js
search.desc/ptr_union/: ptr_union-desc-0-.js
search.desc/rc_borrow/: rc_borrow-desc-0-.js
search.desc/rc_box/: rc_box-desc-0-.js
search.desc/slice_dst/: slice_dst-desc-0-.js
slice_dst/: all.html  fn.alloc_slice_dst.html  fn.alloc_slice_dst_in.html  index.html  sidebar-items.js  struct.SliceWithHeader.html  struct.StrWithHeader.html  trait.AllocSliceDst.html  trait.SliceDst.html  trait.TryAllocSliceDst.html
slice_dst/provided_types/: struct.SliceWithHeader.html  struct.StrWithHeader.html
src/erasable/: lib.rs.html
src/ptr_union/: lib.rs.html
src/rc_borrow/: lib.rs.html
src/rc_box/: lib.rs.html
src/slice_dst/: lib.rs.html  polyfill.rs.html  provided_types.rs.html
trait.impl/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.TryFrom.js
trait.impl/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerExp.js  trait.LowerHex.js  trait.Octal.js  trait.Pointer.js  trait.UpperExp.js  trait.UpperHex.js
trait.impl/core/future/future/: trait.Future.js
trait.impl/core/hash/: trait.Hash.js  trait.Hasher.js
trait.impl/core/iter/traits/collect/: trait.FromIterator.js
trait.impl/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
trait.impl/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/iter/traits/marker/: trait.FusedIterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sized.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/erasable/: trait.Erasable.js  trait.ErasablePtr.js
trait.impl/slice_dst/: trait.AllocSliceDst.js
trait.impl/std/net/socket_addr/: trait.ToSocketAddrs.js
type.impl/core/ptr/non_null/: struct.NonNull.js
