[package]
name = "erasable"
version = "1.0.0-dev"
edition = "2018"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Type-erased thin pointers."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/erasable"
readme = "README.md"
keywords = ["thin","pointer","type","erasure"]
categories = ["data-structures","no-std","rust-patterns"]
license = "MIT OR APACHE-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["alloc"]
alloc = []

# Enable Erasable impls for sync::Weak and rc::Weak.
# Requires feature(weak_into_raw) and for it to support ?Sized types.
# This is not the case as of nightly-2019-12-17.
unstable_weak_into_raw = []
