[package]
name = "erasable"
version = "1.1.1"
edition = "2018"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Type-erased thin pointers."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/erasable"
readme = "README.md"
keywords = ["thin","pointer","type","erasure"]
categories = ["data-structures","no-std","rust-patterns"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["alloc"]
alloc = []

[dependencies]
scopeguard = { version = "1.1.0", default-features = false }

[dev-dependencies]
either = "1.5.3"

[build-dependencies]
autocfg = "1.0.0"

[[test]]
name = "abuse"
path = "tests/abuse.rs"
required-features = ["alloc"]
