[package]
name = "ptr-union"
version = "2.0.1"
edition = "2018"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Pointer union types the size of a pointer by storing the tag in the alignment bits."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/ptr-union"
readme = "README.md"
keywords = ["thin","pointer","union","enum"]
categories = ["data-structures","no-std","rust-patterns"]
license = "MIT OR Apache-2.0"

[package.metadata.workspaces]
independent = true

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["alloc"]
alloc = ["erasable/alloc"]

[dependencies]
paste = "0.1.10"

[dependencies.erasable]
version = "1.0.0"
path = "../erasable"

[build-dependencies]
autocfg = "1.0.0"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["alloc"]
