[package]
name = "rc-borrow"
version = "1.1.0"
edition = "2018"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Borrowed forms of Rc and Arc."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/rc-borrow"
readme = "README.md"
keywords = ["rc","arc","borrow","reference"]
categories = ["data-structures","no-std","rust-patterns"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["erasable", "std"]
std = []

[dependencies.erasable]
version = "1.1.0"
path = "../erasable"
optional = true

[build-dependencies]
autocfg = "1.0.0"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["erasable", "std"]
