[package]
name = "rc-box"
version = "1.0.0"
edition = "2018"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Known unique versions of Rc and Arc."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/rc-box"
readme = "README.md"
keywords = ["rc","arc","unique","box"]
categories = ["data-structures","no-std","rust-patterns"]
license = "MIT OR APACHE-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["erasable"]

[dependencies.erasable]
version = "1.0.0"
path = "../erasable"
optional = true
