[package]
name = "rc-box"
version = "1.3.0"
edition = "2021"
rust-version = "1.80"

authors = ["Christopher Durham (cad97) <cad97@cad97.com>"]
description = "Known unique versions of Rc and Arc."
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/rc-box"
readme = "README.md"
keywords = ["rc", "arc", "unique", "box"]
categories = ["data-structures", "no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[package.metadata.workspaces]
independent = true

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["erasable"]
std = []

[dependencies]
slice-dst = { version = "1.4.0", optional = true }

[dependencies.erasable]
version = "1.0.0"
path = "../erasable"
optional = true

[dependencies.unsize]
version = "1.1"
optional = true

[package.metadata.docs.rs]
all-features = true
