[package]
name = "slice-dst"
version = "1.6.0"
edition = "2021"

description = "Slice-based custom DSTs"
repository = "https://github.com/CAD97/pointer-utils/tree/master/crates/slice-dst"
readme = "README.md"
keywords = ["thin", "slice", "type", "erasure", "dst"]
categories = ["data-structures", "no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[package.metadata.workspaces]
independent = true

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["erasable"]

[dependencies.erasable]
version = "1.1.0"
path = "../erasable"
optional = true

[build-dependencies]
autocfg = "1.0.0"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["erasable"]
